fix: removed vertical scrollbar

--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,7 @@ body {
   background-color: #f1f7f8;
   box-sizing: border-box;
   padding: 1.5% 1.5% 1.5% 1.5%;
-  height: 100%;
+  height: 98%;
 }
 
 /* LEFT SIDE CONTAINER*/
